# baygaud-PI

./: .gitignore  README.md  README.md1  pyproject.toml  requirements-py310.txt  requirements.txt  setup.py
.venv312/: pyvenv.cfg
baygaud.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: ._baygaud_params.py.swp  .swp  _baygaud_params.ddo154.yaml  _baygaud_params.lvhis009.yaml  _baygaud_params.ngc2403.yaml  _baygaud_params.ngc5194.yaml  _baygaud_params.py  _combine_segs.py  _dirs_files.py  _dynesty_sampler.py  _dynesty_sampler.v1.0.py  _fits_io.py  _plot.py  _set_init_priors.py  _stats.py  _utils.py  _version.py  baygaud.0903.py  baygaud.py  baygaud_classify.py  baygaud_viewer.py  test1.mom0.fits  test1.py  test1.sn_int.fits  test2.py
src.2024.0418/: _dynesty_sampler.py  _version.py  baygaud_classify.py
src/__pycache__/: _dynesty_sampler._gaussian_sum_norm-248.py310.1.nbc  _dynesty_sampler._gaussian_sum_norm-248.py310.nbi  _dynesty_sampler._gaussian_sum_norm-268.py310.1.nbc  _dynesty_sampler._gaussian_sum_norm-268.py310.nbi  _dynesty_sampler._gaussian_sum_norm-271.py310.1.nbc  _dynesty_sampler._gaussian_sum_norm-277.py310.1.nbc  _dynesty_sampler._gaussian_sum_norm-277.py310.nbi  _dynesty_sampler._little_derive_rms_npoints_core-298.py310.1.nbc  _dynesty_sampler._little_derive_rms_npoints_core-304.py310.nbi  _dynesty_sampler._little_derive_rms_npoints_core-306.py310.1.nbc  _dynesty_sampler._little_derive_rms_npoints_core-306.py310.nbi  _dynesty_sampler._little_derive_rms_npoints_core-307.py310.1.nbc  _dynesty_sampler._little_derive_rms_npoints_core-307.py310.nbi  _dynesty_sampler._little_derive_rms_npoints_core-313.py310.1.nbc  _dynesty_sampler._little_derive_rms_npoints_core-313.py310.nbi  _dynesty_sampler._loglike_core_numba-1889.py310.1.nbc  _dynesty_sampler._loglike_core_numba-1908.py310.nbi  _dynesty_sampler._loglike_core_numba-1936.py310.nbi  _dynesty_sampler._loglike_core_numba-1966.py310.1.nbc  _dynesty_sampler._loglike_core_numba-1973.py310.1.nbc  _dynesty_sampler._loglike_core_numba-1976.py310.1.nbc  _dynesty_sampler._loglike_core_numba-1977.py310.1.nbc  _dynesty_sampler._loglike_core_numba-1977.py310.nbi  _dynesty_sampler._loglike_core_numba-1979.py310.1.nbc  _dynesty_sampler._loglike_core_numba-1980.py310.1.nbc  _dynesty_sampler._loglike_core_numba-1980.py310.nbi  _dynesty_sampler._loglike_core_numba-1981.py310.1.nbc  _dynesty_sampler._loglike_core_numba-1981.py310.nbi  _dynesty_sampler._loglike_core_numba-1983.py310.nbi  _dynesty_sampler._loglike_core_numba-1984.py310.1.nbc  _dynesty_sampler._loglike_core_numba-1984.py310.nbi  _dynesty_sampler._loglike_core_numba-1985.py310.1.nbc  _dynesty_sampler._loglike_core_numba-1985.py310.nbi  _dynesty_sampler._loglike_core_numba-1990.py310.nbi  _dynesty_sampler._loglike_core_numba-2000.py310.nbi  _dynesty_sampler._loglike_core_numba-2006.py310.1.nbc  _dynesty_sampler._loglike_core_numba-2006.py310.nbi  _dynesty_sampler._loglike_core_numba-2010.py310.1.nbc  _dynesty_sampler._loglike_core_numba-2011.py310.nbi  _dynesty_sampler._loglike_core_numba-2014.py310.1.nbc  (+111 more)
src/baygaud_PI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/baygaud_pi/: README.md  README1.md  _banner.py  _baygaud_params.ddo154.yaml  _baygaud_params.lvhis009.yaml  _baygaud_params.ngc2403.yaml  _baygaud_params.ngc2403.yaml.bak  _combine_segs.py  _dirs_files.py  _dynesty_sampler.py  _fits_io.py  _handle_ray.py  _handle_yaml.py  _info_summary.py  _multi_gaussmodels.py  _progress_bar.py  _set_init_priors.py  _stats.py  _version.py  baygaud.0905.py  baygaud.py  baygaud_classify.py  baygaud_viewer.py  c1.out  c1.py  c2.py  scan_requirements.py  t.csh  (+5 more)
(+6500 files in other folders)
