[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baygaud-PI"
version = "2.0.0"
description = "profile decomposition tool"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{ name = "Se-Heon Oh", email = "seheon.oh@gmail.com" }]
requires-python = ">=3.10"
urls = { Homepage = "https://github.com/seheon-oh/baygaud-PI" }

# 핵심 런타임 의존성(환경 마커로 Py3.12+/3.13 대비)
dependencies = [
  "numpy>=1.26; python_version>='3.12'",
  "scipy>=1.11; python_version>='3.12'",
  "numba>=0.59; python_version>='3.12'",
  "llvmlite>=0.42; python_version>='3.12'",
  "astropy>=6.0; python_version>='3.12'",

  "numpy>=1.23,<1.26; python_version<'3.12'",
  "scipy>=1.10,<1.11; python_version<'3.12'",
  "numba>=0.56.4,<0.59; python_version<'3.12'",
  "llvmlite>=0.39,<0.42; python_version<'3.12'",

  "matplotlib>=3.7", "requests>=2.28", "PyYAML>=6.0"
]

[project.scripts]
baygaud = "baygaud_pi.baygaud:main"
baygaud_classify = "baygaud_pi.baygaud_classify:main"

[tool.setuptools.packages.find]
where = ["src"]

